fixing button on mobile

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -52,9 +52,11 @@ h1 {
 }
 @media only screen and (max-width: 600px) {
   .home-page-button {
-    margin-left: -85px;
+    font-size: 50px;
+    padding: 20px;
   }
 }
+
 /* Bigger Screens  */
 
 @media only screen and (min-width: 3000px) {
